# TableDesSaveurs

./: ReadMe.md  docker-compose.yml  nginx.conf
DB/: Ingredients.csv  TDS.sql
TDS_API/: pyproject.toml
TDS_API/core/: settings.py  urls.py
TDS_API/recipes/: data.json  models.py  serializers.py  views.py
backend/: package-lock.json  package.json
backend/src/: app.ts
frontend/: package-lock.json
frontend/src/: App.tsx  Dockerfile  Main.tsx  index.tsx
frontend/src/css/: Home.css  ListRecipes.css
frontend/src/routes/: AddRecipe.tsx  Card.tsx  Home.tsx  ListRecipes.tsx  RecipeCard.tsx  ShowRecipe.tsx  User.tsx  root.tsx
tds_api/: Dockerfile  db.sqlite3  requirements.txt
tds_api/recipes/: urls.py
tds_api/tds_api/: asgi.py  settings.py  urls.py  wsgi.py
